# pagebake

./: Cargo.toml  README.md  flake.nix
src/: lib.rs  redirects.rs  render.rs  routes.rs
